--- a/about.html
+++ b/about.html
@@ -2,34 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Tayyib Crops</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tayyib Crops | About Us</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 <body class="bg-white text-gray-800 font-sans">
   <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
     <a href="index.html" class="hover:underline">Home</a>
-    <a href="about.html" class="hover:underline font-semibold">About</a>
+    <a href="about.html" class="font-semibold underline">About</a>
     <a href="contact.html" class="hover:underline">Contact</a>
   </nav>
 
   <header class="text-center p-8">
-    <h1 class="text-4xl font-bold">Our Story</h1>
-    <p class="text-lg mt-2 text-green-600">Behind the scenes of Tayyib Crops</p>
+    <h1 class="text-4xl font-bold mb-2">About Tayyib Crops</h1>
+    <p class="text-green-600 text-lg max-w-xl mx-auto">
+      We grow fresh, chemical-free oyster mushrooms in our home microfarm.  
+      Here are some photos from our farm setup and harvest!
+    </p>
   </header>
 
-  <main class="px-6 space-y-8">
+  <main class="max-w-5xl mx-auto px-4">
     <section>
-      <p>We started Tayyib Crops with a simple mission: to provide clean, safe, and fresh mushrooms grown right in our home. Our mini indoor farm was once a study room — now it produces beautiful oyster mushrooms without any chemicals or pesticides.</p>
-    </section>
-
-    <section>
-      <h2 class="text-2xl font-semibold mb-4">Our Mushroom Farm</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <img src="images/mushroom1.jpg" alt="Fresh mushrooms" class="rounded shadow-md">
-        <img src="images/farm-setup.jpg" alt="Indoor farm setup" class="rounded shadow-md">
+      <h2 class="text-2xl font-semibold mb-6">Our Mushroom Farm Gallery</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <!-- Images inserted here -->
+        <img src="images/1.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/2.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/3.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/4.jpeg" alt="Growing mushrooms indoors" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/5.jpeg" alt="Harvested oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/6.jpeg" alt="Mushroom bags ready for harvest" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/7.jpeg" alt="Farming equipment and supplies" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/8.jpeg" alt="Healthy oyster mushrooms growing" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/9.jpeg" alt="Packaging freshly picked mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/10.jpeg" alt="Our mini hi-tech mushroom farm" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/11.jpeg" alt="Close-up mushroom clusters" class="rounded shadow-md object-cover w-full h-48" />
       </div>
-      <p class="text-sm text-gray-500 mt-2">* You can replace these with your real images later *</p>
     </section>
   </main>
 
