--- a/about.html
+++ b/about.html
@@ -1,47 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tayyib Crops | About Us</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-800 font-sans">
-  <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
+<body class="bg-white text-gray-900 font-sans">
+  <nav class="bg-green-100 p-4 flex justify-center space-x-6 text-green-700 shadow-md">
     <a href="index.html" class="hover:underline">Home</a>
     <a href="about.html" class="font-semibold underline">About</a>
     <a href="contact.html" class="hover:underline">Contact</a>
   </nav>
 
-  <header class="text-center p-8">
-    <h1 class="text-4xl font-bold mb-2">About Tayyib Crops</h1>
-    <p class="text-green-600 text-lg max-w-xl mx-auto">
-      We grow fresh, chemical-free oyster mushrooms in our home microfarm.  
-      Here are some photos from our farm setup and harvest!
+  <header class="text-center py-12 max-w-4xl mx-auto px-4">
+    <h1 class="text-4xl font-bold mb-4">About Tayyib Crops</h1>
+    <p class="text-green-600 text-lg">
+      We grow fresh, chemical-free oyster mushrooms in our hi-tech home microfarm.
+      Here’s our story and the passion behind Tayyib Crops.
     </p>
   </header>
 
-  <main class="max-w-5xl mx-auto px-4">
+  <main class="max-w-5xl mx-auto px-4 space-y-10">
     <section>
-      <h2 class="text-2xl font-semibold mb-6">Our Mushroom Farm Gallery</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <!-- Images inserted here -->
+      <h2 class="text-2xl font-semibold mb-4">Our Mission</h2>
+      <p>
+        To provide fresh, safe, and eco-friendly mushrooms grown with care right at home.
+        We avoid chemicals and focus on sustainable farming methods.
+      </p>
+    </section>
+
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">Our Farm Gallery</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
         <img src="images/1.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
         <img src="images/2.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
         <img src="images/3.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/4.jpeg" alt="Growing mushrooms indoors" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/5.jpeg" alt="Harvested oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/6.jpeg" alt="Mushroom bags ready for harvest" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/7.jpeg" alt="Farming equipment and supplies" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/8.jpeg" alt="Healthy oyster mushrooms growing" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/9.jpeg" alt="Packaging freshly picked mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/10.jpeg" alt="Our mini hi-tech mushroom farm" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/11.jpeg" alt="Close-up mushroom clusters" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/4.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/5.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/6.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/7.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/8.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/9.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/10.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
+        <img src="images/11.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
       </div>
+    </section>
+
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">Why Choose Tayyib Crops?</h2>
+      <ul class="list-disc list-inside space-y-2">
+        <li>Proudly grown locally</li>
+        <li>No pesticides or chemicals</li>
+        <li>Hand-harvested with care</li>
+        <li>Picked fresh daily</li>
+        <li>Vegan & gluten-free</li>
+        <li>Eco-friendly farming</li>
+      </ul>
     </section>
   </main>
 
-  <footer class="bg-green-100 text-center text-sm p-4 mt-8 text-gray-600">
+  <footer class="bg-green-100 text-center text-sm p-4 mt-10 text-gray-600">
     &copy; 2025 Tayyib Crops. All rights reserved.
   </footer>
 </body>
