--- a/about.html
+++ b/about.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tayyib Crops | About Us</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | Tayyib Crops</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-white text-gray-900 font-sans">
-  <nav class="bg-green-100 p-4 flex justify-center space-x-6 text-green-700 shadow-md">
+<body class="bg-white text-gray-800 font-sans">
+  <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
     <a href="index.html" class="hover:underline">Home</a>
-    <a href="about.html" class="font-semibold underline">About</a>
+    <a href="about.html" class="hover:underline font-semibold">About</a>
     <a href="contact.html" class="hover:underline">Contact</a>
   </nav>
 
-  <header class="text-center py-12 max-w-4xl mx-auto px-4">
-    <h1 class="text-4xl font-bold mb-4">About Tayyib Crops</h1>
-    <p class="text-green-600 text-lg">
-      We grow fresh, chemical-free oyster mushrooms in our hi-tech home microfarm.
-      Here’s our story and the passion behind Tayyib Crops.
-    </p>
+  <header class="text-center p-8 bg-green-50">
+    <h1 class="text-4xl font-bold">About Tayyib Crops</h1>
+    <p class="text-lg mt-2 text-green-600">Pure, local, and grown with love</p>
   </header>
 
-  <main class="max-w-5xl mx-auto px-4 space-y-10">
+  <main class="px-6 py-10 max-w-4xl mx-auto space-y-12">
     <section>
-      <h2 class="text-2xl font-semibold mb-4">Our Mission</h2>
-      <p>
-        To provide fresh, safe, and eco-friendly mushrooms grown with care right at home.
-        We avoid chemicals and focus on sustainable farming methods.
-      </p>
+      <h2 class="text-2xl font-semibold text-green-700 mb-2">🌿 Our Mission</h2>
+      <p class="text-lg">At Tayyib Crops, we grow what we feed our own kids — pure, chemical-free oyster mushrooms and seasonal produce. True to the name <strong>Tayyib</strong>, meaning “pure,” everything we offer is grown with care and shared with delight, from our family to yours.</p>
     </section>
 
     <section>
-      <h2 class="text-2xl font-semibold mb-4">Our Farm Gallery</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-        <img src="images/1.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/2.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/3.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/4.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/5.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/6.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/7.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/8.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/9.jpeg" alt="Close-up of oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/10.jpeg" alt="Fresh oyster mushrooms" class="rounded shadow-md object-cover w-full h-48" />
-        <img src="images/11.jpeg" alt="Mushroom cultivation setup" class="rounded shadow-md object-cover w-full h-48" />
-      </div>
+      <h2 class="text-2xl font-semibold text-green-700 mb-2">🔭 Our Vision</h2>
+      <p class="text-lg">Inspired by the meaning of Tayyib — “pure” — we aim to stay small and sincere, building a local circle that values clean, homegrown food. At Tayyib Crops, we grow with love and share with intention.</p>
     </section>
 
     <section>
-      <h2 class="text-2xl font-semibold mb-4">Why Choose Tayyib Crops?</h2>
-      <ul class="list-disc list-inside space-y-2">
-        <li>Proudly grown locally</li>
-        <li>No pesticides or chemicals</li>
-        <li>Hand-harvested with care</li>
-        <li>Picked fresh daily</li>
-        <li>Vegan & gluten-free</li>
-        <li>Eco-friendly farming</li>
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">💚 Our Core Values</h2>
+      <ul class="space-y-4 text-lg">
+        <li>
+          <strong>🌱 Purity:</strong> We grow food that lives up to our name — <em>Tayyib</em>, meaning pure. No chemicals. No shortcuts. Just clean, honest produce we trust for our own kids.
+        </li>
+        <li>
+          <strong>👨‍👩‍👧‍👦 Family First:</strong> Our farm is run by family, for families. Every mushroom and fruit is grown with the same care we give to feeding our loved ones.
+        </li>
+        <li>
+          <strong>🏡 Local & Personal:</strong> We don’t aim to go big. We stay close, sharing our produce only with nearby homes — keeping things fresh, direct, and personal.
+        </li>
+        <li>
+          <strong>🧺 Careful Growing:</strong> We believe slow, thoughtful growing beats fast farming. We hand-harvest and handle everything with care.
+        </li>
+        <li>
+          <strong>🤝 Integrity Over Scale:</strong> We’re not a factory. We’re a family sharing what we grow. Every sale carries our name, so we keep it honest, always.
+        </li>
       </ul>
+    </section>
+
+    <section>
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">📸 Our Farm in Pictures</h2>
+      <p class="mb-4 text-lg">Take a look at some snapshots from our farm — our fresh mushrooms, thriving fruit trees, and mangoes ripened naturally without chemicals.</p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <img src="images/1.jpeg" alt="Oyster Mushrooms" class="rounded-lg shadow-md">
+        <img src="images/2.jpeg" alt="Mushroom Farming" class="rounded-lg shadow-md">
+        <img src="images/3.jpeg" alt="Mango Tree" class="rounded-lg shadow-md">
+        <img src="images/4.jpeg" alt="Ripened Mangoes" class="rounded-lg shadow-md">
+        <img src="images/5.jpeg" alt="Sliced Mango on Table" class="rounded-lg shadow-md">
+        <img src="images/6.jpeg" alt="Papaya or Sapota Tree" class="rounded-lg shadow-md">
+      </div>
     </section>
   </main>
 
-  <footer class="bg-green-100 text-center text-sm p-4 mt-10 text-gray-600">
+  <footer class="bg-green-100 text-center text-sm p-4 mt-8 text-gray-600">
     &copy; 2025 Tayyib Crops. All rights reserved.
   </footer>
 </body>
