--- a/about.html
+++ b/about.html
@@ -3,65 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tayyib Crops | Homegrown Mushrooms</title>
+  <title>About | Tayyib Crops</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js" defer></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
   <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
-    <a href="index.html" class="hover:underline font-semibold">Home</a>
-    <a href="about.html" class="hover:underline">About</a>
+    <a href="index.html" class="hover:underline">Home</a>
+    <a href="about.html" class="hover:underline font-semibold">About</a>
     <a href="contact.html" class="hover:underline">Contact</a>
   </nav>
 
-  <header class="text-center p-8">
-    <h1 class="text-4xl font-bold">Tayyib Crops</h1>
-    <p class="text-lg mt-2 text-green-600">Fresh, chemical-free oyster mushrooms and seasonal fruits grown at home</p>
+  <header class="text-center py-10 px-6 bg-green-50">
+    <h1 class="text-4xl font-bold text-green-800">About Tayyib Crops</h1>
+    <p class="text-lg text-green-700 mt-4 max-w-3xl mx-auto">
+      Rooted in the values of purity, family, and mindful growing, Tayyib Crops is a small homegrown initiative that believes in clean, honest food.
+    </p>
   </header>
 
-  <main class="px-6 space-y-12 max-w-5xl mx-auto">
+  <main class="px-6 py-10 max-w-5xl mx-auto space-y-16">
+    <!-- Mission and Vision -->
     <section>
-      <h2 class="text-2xl font-semibold">Welcome!</h2>
-      <p>We grow oyster mushrooms and seasonal fruits using a clean, eco-friendly process in a hi-tech indoor microfarm setup and in our home garden. Everything is grown for our family and shared with you — fresh, safe, and chemical-free.</p>
+      <h2 class="text-2xl font-bold text-green-800 mb-4">🌱 Our Mission</h2>
+      <p>
+        At Tayyib Crops, we grow what we feed our own kids — pure, chemical-free oyster mushrooms and seasonal produce. True to the name <strong>Tayyib</strong>, meaning “pure,” everything we offer is grown with care and shared with delight, from our family to yours.
+      </p>
+
+      <h2 class="text-2xl font-bold text-green-800 mt-10 mb-4">👀 Our Vision</h2>
+      <p>
+        Inspired by the meaning of <strong>Tayyib</strong> — “pure” — we aim to stay small and sincere, building a local circle that values clean, homegrown food. At Tayyib Crops, we grow with love and share with intention.
+      </p>
     </section>
 
+    <!-- Our Core Values -->
     <section>
-      <h2 class="text-2xl font-semibold">Why Choose Us?</h2>
-      <ul style="list-style: none; padding: 0; font-size: 1.05em;">
-        <li>✅ <strong>Proudly Grown Locally</strong></li>
-        <li>🌿 <strong>No Pesticides or Chemicals</strong></li>
-        <li>🤲 <strong>Hand-harvested with care</strong></li>
-        <li>🧺 <strong>Picked Fresh Daily</strong></li>
-        <li>🌱 <strong>Vegan & Gluten-Free</strong></li>
-        <li>♻️ <strong>Eco-Friendly Farming</strong></li>
-      </ul>
+      <h2 class="text-2xl font-bold text-green-800 mb-6">💚 Our Core Values</h2>
+      <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+        <div class="bg-green-50 p-4 rounded shadow">
+          <div class="text-3xl">🍃</div>
+          <h3 class="font-semibold text-lg mt-2">Purity</h3>
+          <p class="text-sm">
+            We grow food that lives up to our name — Tayyib, meaning pure. No chemicals. No shortcuts. Just clean, honest produce we trust for our own kids.
+          </p>
+        </div>
+
+        <div class="bg-green-50 p-4 rounded shadow">
+          <div class="text-3xl">👨‍👩‍👧‍👦</div>
+          <h3 class="font-semibold text-lg mt-2">Family First</h3>
+          <p class="text-sm">
+            Our farm is run by family, for families. Every mushroom and fruit is grown with the same care we give to feeding our loved ones.
+          </p>
+        </div>
+
+        <div class="bg-green-50 p-4 rounded shadow">
+          <div class="text-3xl">🏘️</div>
+          <h3 class="font-semibold text-lg mt-2">Local & Personal</h3>
+          <p class="text-sm">
+            We don’t aim to go big. We stay close, sharing our produce only with nearby homes — keeping things fresh, direct, and personal.
+          </p>
+        </div>
+
+        <div class="bg-green-50 p-4 rounded shadow">
+          <div class="text-3xl">🪴</div>
+          <h3 class="font-semibold text-lg mt-2">Careful Growing</h3>
+          <p class="text-sm">
+            We believe slow, thoughtful growing beats fast farming. We hand-harvest and handle everything with care.
+          </p>
+        </div>
+
+        <div class="bg-green-50 p-4 rounded shadow">
+          <div class="text-3xl">👐</div>
+          <h3 class="font-semibold text-lg mt-2">Integrity Over Scale</h3>
+          <p class="text-sm">
+            We’re not a factory. We’re a family sharing what we grow. Every sale carries our name, so we keep it honest, always.
+          </p>
+        </div>
+      </div>
     </section>
 
-    <section x-data="{ slide: 0, images: [
-      { src: 'images/1.jpeg', caption: 'Freshly harvested oyster mushrooms' },
-      { src: 'images/3.jpeg', caption: 'Our flourishing mango tree' },
-      { src: 'images/4.jpeg', caption: 'Naturally ripened mangoes, chemical-free' },
-      { src: 'images/5.jpeg', caption: 'Ripe mangoes ready to serve' },
-      { src: 'images/6.jpeg', caption: 'A glimpse of our papaya or sapota tree' },
-      { src: 'images/2.jpeg', caption: 'Our hi-tech indoor mushroom grow room' }
-    ] }">
-      <h2 class="text-2xl font-semibold text-green-700">📷 A Peek into Our Farm</h2>
-      <p class="text-lg mb-4">Here are some moments captured from our little farm — from fresh mushrooms to fruit trees and the vibrant seasonal produce grown with love.</p>
-
-      <div class="relative">
-        <template x-for="(img, index) in images" :key="index">
-          <div x-show="slide === index" class="transition duration-500 ease-in-out">
-            <img :src="img.src" :alt="img.caption" class="w-full h-96 object-cover rounded-lg shadow-md">
-            <p class="mt-2 text-center text-sm text-gray-600" x-text="img.caption"></p>
-          </div>
-        </template>
-
-        <div class="absolute inset-y-0 left-0 flex items-center">
-          <button @click="slide = (slide - 1 + images.length) % images.length" class="text-2xl px-2 bg-white bg-opacity-70 rounded-full shadow">&#8592;</button>
-        </div>
-        <div class="absolute inset-y-0 right-0 flex items-center">
-          <button @click="slide = (slide + 1) % images.length" class="text-2xl px-2 bg-white bg-opacity-70 rounded-full shadow">&#8594;</button>
-        </div>
+    <!-- Image Gallery -->
+    <section>
+      <h2 class="text-xl font-bold text-green-800 mb-4">📸 A Glimpse of Our Produce</h2>
+      <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
+        <img src="images/1.jpeg" alt="Oyster mushrooms" class="rounded shadow">
+        <img src="images/3.jpeg" alt="Mango tree" class="rounded shadow">
+        <img src="images/4.jpeg" alt="Naturally ripened mangoes" class="rounded shadow">
+        <img src="images/5.jpeg" alt="Sliced mangoes" class="rounded shadow">
+        <img src="images/6.jpeg" alt="Papaya or sapota tree" class="rounded shadow">
       </div>
     </section>
   </main>
